# BadAppleConsoleCPP

./: .gitignore  CMakeLists.txt  README.md  main.cpp
lib/include/: AudioPlayer.h  VideoProcessor.h
lib/src/: AudioPlayer.cpp  VideoProcessor.cpp
lib/video/: VideoProcessor.cpp  VideoProcessor.h
